--- a/index.html
+++ b/index.html
@@ -14,6 +14,152 @@
 </head>
 
 <body>
-  <h1>My Resume</h1>
+
+  <div class="container">
+    <section class="navigation">
+      <div class="top-nav">
+        <p><a href=""></a>Home</p>
+        <p><a href=""></a>About</p>
+        <p><a href=""></a>Portfolio</p>
+        <p><a href=""></a>Contact</p>
+
+
+      </div>
+
+      <div class="intro">
+        <h2>Intro</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia rem recusandae dolorem repudiandae architecto nobis, ducimus in quis labore, corrupti provident hic, deleniti quo eligendi sed reprehenderit est ea excepturi.</p>
+      </div>
+
+      <div class="skills">
+        <h2>Skills</h2>
+        <p>
+          <ul>Skill</ul>
+          <ul>Skill</ul>
+          <ul>Skill</ul>
+          <ul>Skill</ul>
+        </p>
+      </div>
+
+      <div class="work-history">
+        <table>
+          <tr>
+            <th>Company</th>
+            <th>Title</th>
+            <th>Tech Used</th>
+          </tr>
+          <tr>
+            <td>Company Name</td>
+            <td>Title 2</td>
+            <td>Tech</td>
+          </tr>
+          <tr>
+            <td>Company Name</td>
+            <td>Title 3</td>
+            <td>Tech</td>
+          </tr>
+          <tr>
+            <td>Company Name</td>
+            <td>Title 4</td>
+            <td>Tech</td>
+          </tr>
+        </table>
+      </div>
+
+
+
+
+
+      <article id="contact" class="wrapper style4">
+				<div class="container medium">
+					<header>
+						<h2>Have me make stuff for you.</h2>
+						<p>Ornare nulla proin odio consequat sapien vestibulum ipsum.</p>
+					</header>
+					<div class="row">
+						<div class="col-12">
+							<form method="post" action="#">
+								<div class="row">
+									<div class="col-6 col-12-small">
+										<input type="text" name="name" id="name" placeholder="Name" />
+									</div>
+									<div class="col-6 col-12-small">
+										<input type="text" name="email" id="email" placeholder="Email" />
+									</div>
+									<div class="col-12">
+										<input type="text" name="subject" id="subject" placeholder="Subject" />
+									</div>
+									<div class="col-12">
+										<textarea name="message" id="message" placeholder="Message"></textarea>
+									</div>
+									<div class="col-12">
+										<ul class="actions">
+											<li><input type="submit" value="Send Message" /></li>
+											<li><input type="reset" value="Clear Form" class="alt" /></li>
+										</ul>
+									</div>
+								</div>
+							</form>
+						</div>
+						<div class="col-12">
+
+							<h3>Check out my...</h3>
+							<ul class="social">
+								
+								<!--<li><a href="#" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>-->
+								<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
+								<!--
+								<li><a href="#" class="icon fa-rss"><span>RSS</span></a></li>
+								<li><a href="#" class="icon fa-instagram"><span>Instagram</span></a></li>
+								<li><a href="#" class="icon fa-foursquare"><span>Foursquare</span></a></li>
+								<li><a href="#" class="icon fa-skype"><span>Skype</span></a></li>
+								<li><a href="#" class="icon fa-soundcloud"><span>Soundcloud</span></a></li>
+								<li><a href="#" class="icon fa-youtube"><span>YouTube</span></a></li>
+								<li><a href="#" class="icon fa-blogger"><span>Blogger</span></a></li>
+								<li><a href="#" class="icon fa-flickr"><span>Flickr</span></a></li>
+								<li><a href="#" class="icon fa-vimeo"><span>Vimeo</span></a></li>
+								<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+								<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+								<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
+							<li><a href="#" class="icon fa-tumblr"><span class="label">Tumblr</span></a></li>
+								<li><a href="#" class="icon fa-google-plus"><span class="label">Google+</span></a></li>	
+							-->
+							</ul>
+						</div>
+					</div>
+				<!--footer	<footer>
+						<ul id="copyright">
+							<li>&copy; 2019 Davorin Piljic. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						</ul>
+          </footer>-->
+    
+				</div>
+			</article>
+
+
+
+    </section>
+
+
+
+
+
+
+
+
+
+
+
+  </div>
+
+
+
+
+
+
+
+
+
+
 </body>
 </html>
